# modbusHelper

./: .gitignore  ReadMe.MD
example/client/: build.gradle.kts  settings.gradle.kts
example/client/src/jvmMain/kotlin/: Divider.kt  LazyScrollable.kt  Main.kt  MemoryPage.kt  SpaceAroundRow.kt
example/client/src/jvmMain/kotlin/viewPager/: ITabPage.kt  ViewPager.kt
modbusRtuHelper/: CMakeLists.txt
modbusRtuHelper/include/: javalib.h  modbus.h  serialport.h
modbusRtuHelper/src/: javalib.cpp  serialport.cpp
modbusRtuHelper/test/: test.cpp  test_serialport.cpp
modbusRtuHelper/test/javaDemo/src/: Main.java
modbusRtuHelper/test/javaDemo/src/com/ccand99/serialport/: Platform.java  SerialPort.java  SerialPortReadCallback.java  SerialPortUtils.java
modbusTcpHelper/: ReadMe.MD  pom.xml
modbusTcpHelper/doc/: ReadMe.MD
modbusTcpHelper/src/main/java/com/zhipuchina/: App.java
modbusTcpHelper/src/main/java/com/zhipuchina/annotation/: WorkThread.java
modbusTcpHelper/src/main/java/com/zhipuchina/client/: ModbusTcpClient.java  SyncOutputStream.java  TcpClient.java
modbusTcpHelper/src/main/java/com/zhipuchina/event/: AfterEventHandler.java  BeforeEventHandler.java  ChangeEventHandler.java  EventHandler.java  EventManager.java  ReadCallback.java
modbusTcpHelper/src/main/java/com/zhipuchina/exception/: AcknowledgeException.java  DeviceBusyException.java  DeviceFailureException.java  ExtendedExceptionResponseException.java  ModbusException.java  (+8 more)
modbusTcpHelper/src/test/java/com/zhipuchina/: AppTest.java  ErrorTest.java  Funtest.java  MyModbusTcpSeesion.java  MyModbusTcpSession.java  MySessionFactory.java  SliceTest.java  TcpServerTest.java
(+77 files in other folders)
